AclServiceImpl.hasPermissions now works with proxy objects, ie lazily-loaded objects. Removed WISEWebSocketServlet.java Removed unused code blocks in TeacherIndexController Added back maven-tomcat7 dependency in pom.xml